--- a/app/src/main/res/layout/content_checking__prime.xml
+++ b/app/src/main/res/layout/content_checking__prime.xml
@@ -62,7 +62,8 @@
         android:gravity="center"
         android:layout_marginBottom="29dp"
         android:layout_above="@+id/correc"
-        android:layout_alignStart="@+id/correc" />
+        android:layout_alignStart="@+id/correc"
+        android:singleLine="true" />
 
     <ImageView
         android:layout_width="40dp"
